# stash

./: .gitignore  Dockerfile  Makefile  app.py  compose.yml  deployment.yaml  pyproject.toml
.github/workflows/: deploy.yml
k8s/: database.yaml
stash_app/: models.py
static/: app.js  styles.css
templates/: index.html
